Fix user label in tile having wrong color

--- a/res/css/views/rooms/_MemberTileView.pcss
+++ b/res/css/views/rooms/_MemberTileView.pcss
@@ -34,6 +34,7 @@ Please see LICENSE files in the repository root for full details.
     .mx_MemberTileView_user_label {
         font: var(--cpd-font-body-sm-regular);
         font-size: 13px;
+        color: var(--cpd-color-text-secondary);
     }
 
     .mx_MemberTileView_avatar {
